--- a/src/main/webapp/assets/css/gradesManagement.css
+++ b/src/main/webapp/assets/css/gradesManagement.css
@@ -53,8 +53,24 @@ form label {
     font-size: 1rem;
 }
 
-select, input[type="number"], input[type="text"], button {
+.form-row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+
+.form-row label {
     width: 100%;
+    font-size: 1rem;
+}
+
+.form-row .form-group {
+    flex: 1;
+    min-width: 150px;
+}
+
+select, input[type="number"], input[type="text"], button {
+    width: 88%;
     padding: 10px;
     margin: 5px 0 20px 0;
     border: 1px solid #ccc;
@@ -144,5 +160,9 @@ form div {
 
     h1 {
         font-size: 1.8rem;
+    }
+
+    .form-row {
+        flex-direction: column;
     }
 }
