--- a/src/main/webapp/assets/css/coursDelete.css
+++ b/src/main/webapp/assets/css/coursDelete.css
@@ -67,11 +67,12 @@ nav ul li a:hover {
 /* Style principal du tableau */
 .coursAdmin {
     margin: 30px auto;
-    padding: 20px;
+    padding: 30px;
     width: 80%;
     background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
+    flex: 1;
 }
 
 table {
@@ -127,18 +128,4 @@ footer .footer-content {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-footer .social-media {
-    margin-top: 10px;
-}
-
-footer .social-media a {
-    color: white;
-    margin: 0 10px;
-    text-decoration: none;
-}
-
-footer .social-media a:hover {
-    color: #ffdd57;
 }
