--- a/src/main/webapp/assets/css/courseAdd.css
+++ b/src/main/webapp/assets/css/courseAdd.css
@@ -1,21 +1,3 @@
-/* Reset de base */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-/* Corps de la page */
-html, body {
-    height: 100%;
-    font-family: 'Arial', sans-serif;
-    background-color: #f4f4f4;
-    color: #333;
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-}
-
 /* Structure du formulaire */
 .scheduleAdmin {
     background-color: white;
@@ -23,7 +5,11 @@ html, body {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 80%;
-    margin: 0 auto;
+    margin: 30px auto 0;
+}
+
+.test {
+    flex: 1;
 }
 
 form {
@@ -115,32 +101,4 @@ button[type="submit"]:hover {
 /* Effet sur le tableau */
 table th, table td {
     vertical-align: middle;
-}
-
-/* Footer */
-footer {
-    background-color: #333;
-    color: white;
-    padding: 20px 0;
-    text-align: center;
-}
-
-footer .footer-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-footer .social-media {
-    margin-top: 10px;
-}
-
-footer .social-media a {
-    color: white;
-    margin: 0 10px;
-    text-decoration: none;
-}
-
-footer .social-media a:hover {
-    color: #ffdd57;
 }
